update ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,53 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/sampledata/*.tar
+/sampledata/*.gz
+/sampledata/2016/08/22/*.bin
+/sampledata/2016/08/22/*.asc
+/sampledata/2016/08/23/*.bin
+/sampledata/2016/08/23/*.asc
+/sampledata/2016/08/24/*.bin
+/sampledata/2016/08/24/*.asc
+/sampledata/2016/08/25/*.bin
+/sampledata/2016/08/25/*.asc
+/sampledata/2016/08/26/*.bin
+/sampledata/2016/08/26/*.asc
+/sampledata/2016/08/27/*.bin
+/sampledata/2016/08/27/*.asc
+/sampledata/2016/08/28/*.bin
+/sampledata/2016/08/28/*.asc
+/sampledata/2016/08/29/*.bin
+/sampledata/2016/08/29/*.asc
+/sampledata/2016/08/30/*.bin
+/sampledata/2016/08/30/*.asc
+/sampledata/2016/08/31/*.bin
+/sampledata/2016/08/31/*.asc
+/sampledata/2016/09/01/*.bin
+/sampledata/2016/09/01/*.asc
+/sampledata/2016/09/02/*.bin
+/sampledata/2016/09/02/*.asc
+/sampledata/2016/09/03/*.bin
+/sampledata/2016/09/03/*.asc
+/sampledata/2016/09/04/*.bin
+/sampledata/2016/09/04/*.asc
+/sampledata/2016/09/05/*.bin
+/sampledata/2016/09/05/*.asc
+/wgrib2/KERNEL32.dll
+/wgrib2/KERNELBASE.dll
+/wgrib2/Z__C_RJTD_20200512080000_SRF_GPV_Ggis1km_Prr60lv_ANAL_grib2.bin
+/wgrib2/api-ms-win-core-synch-l1-2-0.dll
+/wgrib2/api-ms-win-core-timezone-l1-1-0.dll
+/wgrib2/api-ms-win-core-xstate-l2-1-0.dll
+/wgrib2/cyggcc_s-seh-1.dll
+/wgrib2/cyggfortran-3.dll
+/wgrib2/cyggomp-1.dll
+/wgrib2/cygquadmath-0.dll
+/wgrib2/cygwin1.dll
+/wgrib2/list
+/wgrib2/ntdll.dll
+/wgrib2/rain.csv
+/wgrib2/rain.nc
+/wgrib2/rain.nc.aux.xml
+/wgrib2/wgrib2.exe
+/sampledata/2016_hokkaido.zip
